modified:   backend/.env 	new file:   backend/config/jwtToken.js 	new file:   backend/config/refreshToken.js 	new file:   backend/controller/userConreoller.js 	modified:   backend/index.js 	new file:   backend/middleware/authMiddleware.js 	new file:   backend/middleware/errorHandler.js 	new file:   backend/middleware/generateToken.js 	new file:   backend/model/product.js 	new file:   backend/model/userModel.js 	modified:   backend/node_modules/.package-lock.json 	new file:   backend/node_modules/basic-auth/HISTORY.md 	new file:   backend/node_modules/basic-auth/LICENSE 	new file:   backend/node_modules/basic-auth/README.md 	new file:   backend/node_modules/basic-auth/index.js 	new file:   backend/node_modules/basic-auth/node_modules/safe-buffer/LICENSE 	new file:   backend/node_modules/basic-auth/node_modules/safe-buffer/README.md 	new file:   backend/node_modules/basic-auth/node_modules/safe-buffer/index.d.ts 	new file:   backend/node_modules/basic-auth/node_modules/safe-buffer/index.js 	new file:   backend/node_modules/basic-auth/node_modules/safe-buffer/package.json 	new file:   backend/node_modules/basic-auth/package.json 	modified:   backend/node_modules/body-parser/HISTORY.md 	modified:   backend/node_modules/body-parser/README.md 	modified:   backend/node_modules/body-parser/lib/types/json.js 	modified:   backend/node_modules/body-parser/package.json 	new file:   backend/node_modules/cookie-parser/HISTORY.md 	new file:   backend/node_modules/cookie-parser/LICENSE 	new file:   backend/node_modules/cookie-parser/README.md 	new file:   backend/node_modules/cookie-parser/index.js 	new file:   backend/node_modules/cookie-parser/node_modules/cookie/HISTORY.md 	new file:   backend/node_modules/cookie-parser/node_modules/cookie/LICENSE 	new file:   backend/node_modules/cookie-parser/node_modules/cookie/README.md 	new file:   backend/node_modules/cookie-parser/node_modules/cookie/index.js 	new file:   backend/node_modules/cookie-parser/node_modules/cookie/package.json

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,10 @@
 MONGO_URL = mongodb+srv://gulshan:12345@cluster0.1nenx.mongodb.net/?retryWrites=true&w=majority
 
 PORT = 8484
-SECRET_KEY = gulshan0303kathare
+
+JWT_ACCESS_SECRET=gulshan03031990
+JWT_ACCESS_EXPIRE=15min
+
+JWT_REFRESH_TOLEN = LKJHGFDSERTY12321SGD
+
+JWT_REFRESH_EXPIREIN = 15days
