modified:   backend/.env 	new file:   backend/controller/blogCategoryController.js 	new file:   backend/controller/blogController.js 	new file:   backend/controller/brand.js 	new file:   backend/controller/categortController.js 	new file:   backend/controller/coupon.js 	new file:   backend/controller/emailController.js 	modified:   backend/controller/product.js 	modified:   backend/controller/userConreoller.js 	modified:   backend/index.js 	new file:   backend/model/blog.js 	new file:   backend/model/blogCategory.js 	new file:   backend/model/brand.js 	new file:   backend/model/category.js 	new file:   backend/model/coupon.js 	modified:   backend/model/product.js 	modified:   backend/model/userModel.js 	modified:   backend/node_modules/.package-lock.json 	new file:   backend/node_modules/crypto/README.md 	new file:   backend/node_modules/crypto/package.json 	new file:   backend/node_modules/nodemailer/.gitattributes 	new file:   backend/node_modules/nodemailer/.prettierrc.js 	new file:   backend/node_modules/nodemailer/CHANGELOG.md 	new file:   backend/node_modules/nodemailer/CODE_OF_CONDUCT.md 	new file:   backend/node_modules/nodemailer/CONTRIBUTING.md 	new file:   backend/node_modules/nodemailer/LICENSE 	new file:   backend/node_modules/nodemailer/README.md 	new file:   backend/node_modules/nodemailer/SECURITY.txt 	new file:   backend/node_modules/nodemailer/lib/addressparser/index.js 	new file:   backend/node_modules/nodemailer/lib/base64/index.js 	new file:   backend/node_modules/nodemailer/lib/dkim/index.js 	new file:   backend/node_modules/nodemailer/lib/dkim/message-parser.js 	new file:   backend/node_modules/nodemailer/lib/dkim/relaxed-body.js 	new file:   backend/node_modules/nodemailer/lib/dkim/sign.js 	new file:   backend/node_modules/nodemailer/lib/fetch/cookies.js 	new file:   backend/node_modules/nodemailer/lib/fetch/index.js 	new file:   backend/node_modules/nodemailer/lib/json-transport/index.js 	new file:   backend/node_modules/nodemailer/lib/mail-

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 MONGO_URL = mongodb+srv://gulshan:12345@cluster0.1nenx.mongodb.net/?retryWrites=true&w=majority
 
 PORT = 8484
+MAIL_PASSWORD=bbybovumcinbyjot
+MAIL_ADDRESS = sinukathare@gmail.com
 
 JWT_ACCESS_SECRET=gulshan03031990
 JWT_ACCESS_EXPIRE=15min
