--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.5",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
